MDEV-5096 - Wrong error message on attempt to kill somebody else's query ID

Attempting to kill query owned by different user now returns better error:
"You are not owner of query N" instead of "You are not owner of thread N".